kubernetes/k6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k6-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k6
  template:
    metadata:
      labels:
        app: k6
    spec:
      containers:
      - name: k6-container
        image: loadimpact/k6:latest
        command: ["/bin/sh"]
        args: ["-c", "sleep infinity"]
