kubernetes/polymetrie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polymetrie-app
  labels:
    app: polymetrie-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polymetrie-app
  template:
    metadata:
      labels:
        app: polymetrie-app
    spec:
      containers:
      - name: polymetrie-app
        image: leolebossducloud/polymetrie:latest
        ports:
        - containerPort: 80
