kubernetes/k6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k6-service
  namespace: default
spec:
  selector:
    app: k6
  ports:
    - name: k6-port
      protocol: TCP
      port: 80
      targetPort: 80
