kubernetes/polymetrie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polymetrie-service
  namespace: default
spec:
  selector:
    app: polymetrie-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
