kubernetes/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: polymetrie-service.orch-team-a.pns-projects.fr.eu.org
      http:
          paths:
            - path: /grafana
              pathType: Prefix
              backend:
                service:
                  name: prometheus-grafana
                  port:
                    number: 80
            - path: /prometheus
              pathType: Prefix
              backend:
                service:
                  name: prometheus-kube-prometheus-prometheus
                  port:
                    number: 9090
